[package]
name = "zeuhl_fraction"
version = "0.1.3"
edition = "2024"

description = "A simple fraction used in matrix operations"

documentation = "https://docs.rs/zeuhl_fraction/"
homepage = "https://crates.io/crates/zeuhl_fraction"
repository = "https://github.com/ZeuhL202/simple-fraction"

readme = "README.md"

keywords = ["zeuhl","fraction","math"]
categories = ["mathematics"]
license = "MIT"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
